<resources>
    <string name="app_name">Pregnancy Tracker</string>

    <!--Splash Screen-->
    <string name="welcome">Welcome</string>

    <!--New User Activity-->
    <string name="pick_a_due_date">Pick a Due Date</string>
    <string name="get_started">Get started</string>

    <!--Weight portfolio recycler view item-->
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="measures">measures</string>

    <!--Paring device-->
    <string name="pairing_title">Pair Device</string>
    <string name="pairting_text">Do you see a blinking blue light on the device?</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>

    <!--Heart rate sensor part-->
    <string name="metawear">MetaWear</string>
    <string name="no_metawear_connected">No Metawear Connected</string>
    <string name="metawear_connected">Metawear Connected</string>
    <string name="metawear_syncing">Metawear Syncing</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="forget">Forget</string>
    <string name="clear_restart">Clear Restart</string>
    <string name="reset_device">Reset Device</string>
    <string name="toast_connected">MetaWear Connected</string>
    <string name="toast_disconnected">MetaWear Disconnected</string>
    <string name="pairing_text">Do you see a blinking blue LED on the MetaWear?</string>
    <string name="error_soft_reset">Error resetting board</string>

    <string name="action_settings">Settings</string>
    <string name="days_left">"%d days to due date"</string>
    <string name="insert_your_weight">Insert your weight</string>
    <string name="add_weight">Add weight</string>
    <string name="unit">kg</string>

</resources>
