<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.yasi27.final2.HeartRateSensorFragment"
    tools:showIn="@layout/activity_heart_rate">

    <RelativeLayout
        android:id="@+id/top_info"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight=".13"
        android:focusableInTouchMode="false"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mw_board_icon"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:focusableInTouchMode="false"
            android:src="@drawable/metawear_board" />


        <TextView
            android:id="@+id/meta_wear_title"
            style="@style/metawearTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_toEndOf="@id/mw_board_icon"
            android:paddingLeft="11dp"
            android:paddingTop="0dp"
            android:text="@string/metawear"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/connection_status"
            style="@style/metawearConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/meta_wear_title"
            android:layout_toEndOf="@+id/mw_board_icon"
            android:paddingLeft="11dp"
            android:paddingTop="4dp"
            android:text="@string/no_metawear_connected" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02">

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#787878" />

    </LinearLayout>

    <TextView
        android:id="@+id/temperature_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".13"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="sans-serif-bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/heart_rate"
        android:textAlignment="center"
        android:textAppearance="@style/heartRateTitle" />

    <ImageView
        android:id="@+id/heart_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_weight=".46"
        android:focusableInTouchMode="false"
        android:src="@drawable/heart_rate_bkg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"></TextView>

        <TextView
            android:id="@+id/bpm"
            style="@style/heartRateValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".4"
            android:gravity="center"
            android:text="60" />

        <TextView
            style="@style/heartRateBPM"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".4"
            android:gravity="center"
            android:text="bpm" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"></TextView>

    </LinearLayout>

</LinearLayout>
